--- a/index.html
+++ b/index.html
@@ -90,7 +90,30 @@
             </button>
           </div>
      </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-</body>
+    </div>
+
+     <div class="container categories">
+       <div class="row">
+         <div class="col-md-4">
+           <div class="cat1 d-flex justify-content-between align-items-center">
+             <h1>watch</h1>
+             <img src="images/categories/watch.png" alt="">
+           </div>
+         </div>
+         <div class="col-md-4">
+           <div class="cat2 d-flex justify-content-between align-items-center">
+             <h1>Bag</h1>
+             <img src="images/categories/bag.png" alt="">
+           </div>
+         </div>
+         <div class="col-md-4">
+           <div class="cat3 d-flex justify-content-between align-items-center">
+             <h1>shoes</h1>
+             <img src="images/categories/shoes.png" alt="">
+           </div>
+         </div>
+       </div>
+     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+ </body>
 </html>
