--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
         </div>
       </div>
      </div>
+
+
+     <div class="container orange-bg d-flex justify-content-center align-items-center" id="subscribe">
+        <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h4>gets update sales</h4>
+        <input class="form-control" type="text">
+        <button class="buy-now">SUBMIT</button>
+        </div>
+     </div>
+     <footer>
+       <small> &#169; reseved by panda commerce.</small>
+     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
  </body>
 </html>
